 /* $Id: changelog,v 1.680 2000-01-31 22:32:03 sandervl Exp $ */

 2000-02-01: Jens Wiessner <wiessnej@rfi.de>
	- NTDLL: Updated .def file (similar to NT 4 SP6) + bugfix for impdef

 2000-01-31: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: GetDCEx with window handle 0 fails in Windows 98; now it also 
                  returns an error in Odin.
                  GetWindowDC & GetDC use the desktop window handle if hwnd == 0
                  (before calling GetDCEx)
	- GDI32: Set dibsection bitmap data to 0 when allocating it.

 2000-01-30: Sander van Leeuwen <sandervl@xs4all.nl>
	- PELDR: Fixed error messages for images without fixups (peldr.dll no
                 longer required)
	- GDI32: Removed wrong bugfix for GetDIBits (breaks Lotus Notes)
	- USER32: Don't check for window visibility when calling SetWindowPos
                  in SetMenu. (fixes menu in standard minesweeper)
                  (NOTE: May need to call SetWindowPos with SWP_FRAMECHANGED 
                         when showing a window (see Wine code))
		  Put back GetMenuStringA fix (return length of string if string pointer
                  or size parameter == 0) (almost fixes Realplayer 7 menu)

 2000-01-29: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32: Save and restore FPU control word when calling
                 Open32's DrawText. DrawText trashes it which causes drawing
                 problems in RealPlayer 7.
	- USER32: Call DrawTextA in uitools.cpp, not Open32's DrawText.
                  Fix for SetWindowPos for showing hidden windows
                  (call ShowWindow) -> fixed non-visible button bar in mIRC
                  Don't set WS_VISIBLE on by default. Windows are made visible
                  during creation by calling ShowWindow.    
                  Call UpdateWindow for client window, not the frame.
	- INCLUDE\WIN\wingdi.h: Added GdiFlush declaration
	- INCLUDE\makefiles: Added c/c++ definitions for win32 apps (without